--- a/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.resx
+++ b/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="English" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="French" xml:space="preserve">
+    <value>French</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Home</value>
   </data>
