--- a/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.fr-FR.resx
+++ b/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.fr-FR.resx
@@ -120,11 +120,17 @@
   <data name="English" xml:space="preserve">
     <value>Anglais</value>
   </data>
+  <data name="EnterAPIKey" xml:space="preserve">
+    <value>Veuillez entrer votre clé API ici</value>
+  </data>
   <data name="French" xml:space="preserve">
     <value>Français</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Acceuil</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Se connecter</value>
   </data>
   <data name="LogOut" xml:space="preserve">
     <value>Se déconnecter</value>
