--- a/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.fr-FR.resx
+++ b/src/VN-master-detail/VN-master-detail/Resources/Localization/AppResources.fr-FR.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Done" xml:space="preserve">
+    <value>Ok</value>
+  </data>
   <data name="English" xml:space="preserve">
     <value>Anglais</value>
   </data>
   <data name="EnterAPIKey" xml:space="preserve">
     <value>Veuillez entrer votre clé API ici</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Erreur</value>
   </data>
   <data name="French" xml:space="preserve">
     <value>Français</value>
@@ -141,7 +147,16 @@
   <data name="Settings" xml:space="preserve">
     <value>Paramètres</value>
   </data>
+  <data name="Success" xml:space="preserve">
+    <value>Succès</value>
+  </data>
   <data name="Username" xml:space="preserve">
     <value>Nom d'utilisateur</value>
+  </data>
+  <data name="WrongCredentials" xml:space="preserve">
+    <value>Indentifiants de connection incorects, veuillez réessayer.</value>
+  </data>
+  <data name="YouAreConnected" xml:space="preserve">
+    <value>Vous avez été connecté avec succès</value>
   </data>
 </root>
